force-app/main/default/objects/User/fields/Global_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Global_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Global External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>