force-app/main/default/objects/User/listViews/AllUsers_mig.listView-meta.xml
<ListView>
    <fullName>AllUsers_mig</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>V2_External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Users (migrated)</label>
</ListView>