force-app/main/default/objects/User/listViews/Customer_Community_Plus_Users.listView-meta.xml
<ListView>
    <fullName>Customer_Community_Plus_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>SFDC_License_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SFDC_License_Type__c</field>
        <operation>contains</operation>
        <value>Customer Community Plus</value>
    </filters>
    <label>Customer Community Plus Users</label>
</ListView>