force-app/main/default/objects/User/listViews/Form_Assembly_Users.listView-meta.xml
<ListView>
    <fullName>Form_Assembly_Users</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>swapna.maganti@pearson.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>swapna.maganti@pearson.com</value>
    </filters>
    <label>Form Assembly Users</label>
</ListView>